--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -81,7 +81,7 @@
 				{% for group in chinagrouped %}
 				<li class="nav-item top-level {% if group.name == page.category %}current{% endif %}">
 					{% assign items = group.items | sort: 'order' %}
-					<a href="{{ site.baseurl }}/china/{{ items.first.url }}">{{ group.name }}</a>
+					<a href="{{ site.baseurl }}{{ items.first.url }}">{{ group.name }}</a>
 					<ul>
 						{% for item in items %}
 						<li class="nav-item {% if item.url == page.url %}current{% endif %}"><a
